Added homepage for gh-pages

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://kiremitrov.github.io/Scandiweb-Kire-Mitrov/",
   "name": "scandiweb",
   "version": "0.1.0",
   "private": true,
